# cargo-wasm

./: Cargo.toml  README.md  wasm-opt.txt
src/: main.rs  templates.rs  wasm_opt.rs
templates/: rollup.package.json
templates/rollup/: .gitignore  rollup.config.js
templates/web/: .gitignore
test_crates/: _test.wasm
test_crates/crate1/: Cargo.toml
test_crates/rollup/crate/: .gitignore
test_crates/rollup/crate/src/: lib.rs
test_crates/rollup/workspace/: package.json
test_crates/rollup/workspace/crate1/: Cargo.toml
test_crates/rollup/workspace/crate2/: Cargo.toml
test_crates/web/crate/: .gitignore  Cargo.toml
test_crates/workspace1/: .gitignore  Cargo.toml
